# weather-forecast-app

./: .gitignore  pyproject.toml
src/: .env.dist  main.py
src/app/: config.py  dependencies.py  models.py
src/app/api/: __init__.py  routes.py
src/app/service/: abstractions.py  openweathermap.py
src/app/web/: routes.py
src/templates/home/: index.html
